[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Ship.png" type="Texture" id=1]
[ext_resource path="res://Ship/Ship.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Fish.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Pixolletta8px.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Ship/Crash_sound_effect/Crash_sound.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[node name="Ship" type="KinematicBody2D" groups=["Ship"]]
script = ExtResource( 2 )
crash_sound_path = ExtResource( 5 )

[node name="Path_line" type="Line2D" parent="."]
position = Vector2( 0, 12 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16, 8, -16, 12, -12, 16, 12, 16, 16, 12, 16, 8, 10, 8, 10, -2, 0, -2, 0, 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -16, 8, -16, 12, -12, 16, 12, 16, 16, 12, 16, 8, 10, 8, 10, -2, 0, -2, 0, 8 )

[node name="Fishing_timer" type="Timer" parent="."]

[node name="Fish_amount" type="Node2D" parent="."]

[node name="Fish_amount_label" type="Label" parent="Fish_amount"]
margin_left = -2.0
margin_top = 18.0
margin_right = 34.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish_amount_icon" type="Sprite" parent="Fish_amount"]
position = Vector2( -8, 22 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Health_label" type="Label" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = -6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "HP : 4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="Fishing_timer" to="." method="_on_Fishing_timer_timeout"]
